--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,11 @@
 [
   {
+    "name" : "Oddam w dobre rece",
+    "description" : "The aim of the project is to create a place where everyone can donate unnecessary items to trusted institutions.",
+    "link" : "https://github.com/KamilaGrabowska/Oddam_w_dobre_rece"
+  },
+
+  {
     "name" : "Books Kids appSearch",
     "description" : "KidsBookSearch is a simple application for searching and exploring children's books. The app allows parents and caregivers to quickly find age-appropriate books tailored to their child's interests.",
     "link" : "https://github.com/KamilaGrabowska/Books_Kids_appSearch"
@@ -19,4 +25,5 @@
     "description" : "Design of the Car Sharing website",
     "link" : "https://github.com/KamilaGrabowska/car-sharing/tree/master/src"
   }
+
 ]
