--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,23 +2,29 @@
   {
     "name" : "Oddam w dobre rece",
     "description" : "The aim of the project is to create a place where everyone can donate unnecessary items to trusted institutions.",
-    "link" : "https://github.com/KamilaGrabowska/Oddam_w_dobre_rece"
+    "link" : "https://github.com/KamilaGrabowska/Oddam_w_dobre_rece",
+    "www" :"https://65987a942f4c4e5c13e1aa9e--capable-bubblegum-a30179.netlify.app/"
   },
 
   {
     "name" : "Books Kids appSearch",
     "description" : "KidsBookSearch is a simple application for searching and exploring children's books. The app allows parents and caregivers to quickly find age-appropriate books tailored to their child's interests.",
-    "link" : "https://github.com/KamilaGrabowska/Books_Kids_appSearch"
+    "link" : "https://github.com/KamilaGrabowska/Books_Kids_appSearch",
+    "www" : "https://655fcaf688067900086412fd--delicate-medovik-e1098e.netlify.app/"
   },
   {
     "name" : "To Do App",
     "description" : "The to do app is an application providing users with a tool designed to enhance productivity and organization in users' daily lives.",
     "link" : "https://github.com/KamilaGrabowska/todo_mv/tree/master"
+
+
+
   },
   {
     "name" : "Best Shop",
     "description" : "Mobile design of the BestShop website",
-    "link" : "https://github.com/KamilaGrabowska/bs_rwd"
+    "link" : "https://github.com/KamilaGrabowska/bs_rwd",
+    "www" : "https://gentle-wisp-f070d6.netlify.app/"
   },
   {
     "name" : "Car Sharing",
