add new bgc to component project

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -15,9 +15,8 @@
   {
     "name" : "To Do App",
     "description" : "The to do app is an application providing users with a tool designed to enhance productivity and organization in users' daily lives.",
-    "link" : "https://github.com/KamilaGrabowska/todo_mv/tree/master"
-
-
+    "link" : "https://github.com/KamilaGrabowska/todo_mv/tree/master",
+    "www" : "https://todomvckg.web.app/"
 
   },
   {
